--- a/project.css
+++ b/project.css
@@ -37,7 +37,7 @@ body {
     color: white;
     font-size: 20px;
 }
-#bars{
+/* #bars{
     font-size: 64px;
     position: relative;
     left: 90%;
@@ -45,7 +45,7 @@ body {
     display: none;
     overflow-x: hidden;
     display:none;
-}
+} */
 
 @media(max-width:1041px){
     .nav{
